--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <span>&copy; {{ site.time | date: '%Y' }} {{ site.owner.name }}. 
 	Powered by <a href="http://jekyllrb.com">Jekyll</a> using the <a href="http://mademistakes.com/">HPSTR Theme</a>.</span>
-	Writed by <a href="http://mingcanit.tk">董明灿</a> | <a href="http://www.mingcan.tk">导航</a>编程是一种艺术</small></p>
+	Writed by <a href="http://mingcanit.tk">明灿</a> | 编程是一种艺术</small></p>
